--- a/home.html
+++ b/home.html
@@ -6,6 +6,6 @@
     <title>Pagina home</title>
 </head>
 <body>
-    Pagina Home, esta pagina solo existe en el branch
+    Pagina Home, esta pagina solo existe en el branch, cambios desde el main
 </body>
 </html>
