add new comment to receive changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Prueba de documento</title>
 </head>
 <body>
-    Prueba de documento, add new comment
+    Prueba de documento, add new comment,c ambios desde el main como deberia estar para recibir los
+     cambios
 </body>
 </html>
